[Mac] Fix padding in browser actions container

The horizontal padding around the browser actions
container was incorrectly reduced.

This causes issues where you can't resize the
omnibox (because the extensions now overlap the gripper)
or drag the extensions into the wrench menu

Bug: 825378, 825782
Change-Id: I66061a67546fab679c280a8d816b78dbe19b876e
Reviewed-on: https://chromium-review.googlesource.com/1040914
Reviewed-by: Elly Fong-Jones <ellyjones@chromium.org>
Commit-Queue: Sarah Chan <spqchan@chromium.org>
Cr-Commit-Position: refs/heads/master@{#555740}
Former-commit-id: e132a7eb3c39e5839444aff108d783c2a68b92c2